@@ -9,8 +9,17 @@ import com.cydeo.util.MapperUtil;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+
+import java.util.NoSuchElementException;
+
+
+import java.util.NoSuchElementException;
+
+
+
 import java.util.stream.Collectors;
 import java.util.ArrayList;
+
 @Service
 public class CategoryServiceImpl implements CategoryService {
     private final CategoryRepository categoryRepository;
@@ -23,9 +32,21 @@ public class CategoryServiceImpl implements CategoryService {
         this.mapperUtil = mapperUtil;
     }
     public List<CategoryDto> listAllCategories(){
+
         return categoryRepository.findAll().stream()
-                .map(category -> mapperUtil.convert(category, new CategoryDto()))
-                .collect(Collectors.toList());
+
+        Long companyId = companyService.getCompanyIdByLoggedInUser();
+
+        return categoryRepository.findAllByCompanyId(companyId).stream()
+
+                .map(category -> {
+                    CategoryDto categoryDto =  mapperUtil.convert(category, new CategoryDto());
+                    if(!category.getProductList().stream().toList().isEmpty()){
+                        categoryDto.setHasProduct(true);
+                    }
+                    return categoryDto;
+                })
+                .toList();
     }
     public CategoryDto findById(Long id){
         Category category = categoryRepository.findById(id)
@@ -46,11 +67,41 @@ public class CategoryServiceImpl implements CategoryService {
 
         return mapperUtil.convert(categoryRepository.save(mapperUtil.convert(category, new Category())), new CategoryDto());
     }
+    public boolean existsByDescription(String description) {
+        Category category = categoryRepository.findByDescription(description);
+
+    public boolean existsByDescription(String description) {
+        Category category = categoryRepository.findByDescription(description);
+
 
     @Override
     public List<CategoryDto> listAllCategoriesByCompany() {
         List<Category> categories=categoryRepository.findAllByCompanyId(companyService.getCompanyIdByLoggedInUser());
         return mapperUtil.convert(categories,new ArrayList<>());
+    }
+
+        return category != null;
+    }
+    public void deleteCategory(Long id){
+        Category category = categoryRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Category not found with id: " + id));
+
+
+        category.setIsDeleted(true);
+
+        categoryRepository.save(category);
+    }
+
+        return category != null;
+    }
+    public void deleteCategory(Long id){
+        Category category = categoryRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Category not found with id: " + id));
+
+        category.setIsDeleted(true);
+
+
+        categoryRepository.save(category);
     }
 
 
